# DbgHelpUtils

./: .gitignore  .gitmodules  CMakeLists.txt  DbgHelpUtils.sln  DbgHelpUtils.sln.DotSettings  GenerateDepenencyPropertiesReflection.py  LICENSE  RunAllBuildHeapDumpTests.ps1  RunAllFailedTests.ps1  RunHeapDumpTests.ps1  build.ps1  readme.md  vcpkg-configuration.json
.github/workflows/: build_cmake.yml  build_vs2019x64.yml  build_vs2019x86.yml  build_vs2022x64.yml  build_vs2022x86.yml  codeql-analysis.yml
AllocationSetupTests/: AllocationSetupTests.cpp  AllocationSetupTests.vcxproj  AllocationSetupTests.vcxproj.filters  CMakeLists.txt  GenerateDumps.ps1  ResultSet.h  vcpkg.json
DbgHelpUtils/: CMakeLists.txt  DbgHelpUtils.vcxproj  DbgHelpUtils.vcxproj.filters  allocation_stack_trace_helper.cpp  allocation_stack_trace_helper.h  assert_value.h  basic_type.h  block_range_match_result.h  by_application_callsite_frequency.cpp  by_application_callsite_frequency.h  by_application_callsite_frequency_view.cpp  by_application_callsite_frequency_view.h  by_size_frequency_view.cpp  by_size_frequency_view.h  by_size_ranges_frequency_view.cpp  by_size_ranges_frequency_view.h  by_stacktrace_frequency.cpp  by_stacktrace_frequency.h  by_stacktrace_frequency_view.cpp  by_stacktrace_frequency_view.h  cache_manager.h  call_convention.h  chrono_unit_convert_to_string.h  comment_stream_a.cpp  comment_stream_a.h  comment_stream_w.cpp  comment_stream_w.h  common_symbol_names.cpp  common_symbol_names.h  common_symbol_utils.cpp  common_symbol_utils.h  context_utils.h  context_utils_resources.cpp  crc.h  crt_entry.cpp  crt_entry.h  crt_heap.cpp  crt_heap.h  cv_info_pdb70.cpp  cv_info_pdb70.h  (+324 more)
DbgHelpUtils/ryu/: generic_128.cpp  generic_128.h  ryu_generic_128.h
MiniDumpExplorer/: App.cpp  App.h  App.idl  App.xaml  App.xaml.cpp  App.xaml.h  BoolNegationConverter.cpp  BoolNegationConverter.h  BoolNegationConverter.idl  Category.cpp  Category.idl  DumpFileView.cpp  DumpFileView.h  DumpFileView.xaml  MainPage.cpp  MiniDumpExplorer.vcxproj  MiniDumpExplorer.vcxproj.filters  MiniDumpExplorer.wapproj  Package.appxmanifest  RecentFileItemsDataSource.cpp  RecentFileItemsDataSource.h  Resource.rc  Resources.resw  app.manifest  packages.config  pch.h
MiniDumpExplorer/Controls/: DefaultMember.idl  EditableObject.idl
MiniDumpExplorer/Converters/: BoolToObjectConverter.cpp  BoolToObjectConverter.h  BoolToObjectConverter.idl  BoolToVisibilityConverter.cpp  BoolToVisibilityConverter.h  BoolToVisibilityConverter.idl  DurationConverter.cpp  DurationConverter.h  DurationConverter.idl  HexNumberConverter.cpp  HexNumberConverter.h  HexNumberConverter.idl  LocalNumberConverter.cpp  LocalNumberConverter.h  LocalNumberConverter.idl  SizeNumberConverter.cpp  SizeNumberConverter.h  SizeNumberConverter.idl  TimeStampNumberConverter.cpp  TimeStampNumberConverter.h  TimeStampNumberConverter.idl
MiniDumpExplorer/DlgHelpUtils/: flags_string_utils_impl.cpp  mini_dump_stream_type_impl.cpp  size_units_impl.cpp  (+2 more)
MiniDumpExplorerApp/: Application.manifest  CpuInformation.cpp  CpuInformation.h  CvInfoPdb70.cpp  CvInfoPdb70.h  DbgHelpDispatcher.cpp  DbgHelpDispatcher.h  DumpFile.cpp  DumpFile.h  DumpFileFactory.cpp  DumpFileFactory.h  DumpFileHeader.cpp  DumpFileHeader.h  DumpFileStream.cpp  DumpFileStream.h  DumpFileStreamComment.cpp  DumpFileStreamComment.h  DumpFileStreamException.cpp  DumpFileStreamException.h  DumpFileStreamMiscInfo.cpp  DumpFileStreamMiscInfo.h  DumpFileStreamModuleList.cpp  DumpFileStreamModuleList.h  DumpFileStreamProcessVmCounters.cpp  DumpFileStreamProcessVmCounters.h  DumpFileStreamSystemInfo.cpp  DumpFileStreamSystemInfo.h  DumpFileStreamThreadContext.cpp  DumpFileStreamThreadContext.h  DumpFileStreamX64ThreadContext.cpp  DumpFileStreamX64ThreadContext.h  DumpFileStreamX86ThreadContext.cpp  DumpFileStreamX86ThreadContext.h  GetResult.h  HStringHelper.cpp  HStringHelper.h  MiniDumpData.cpp  MiniDumpData.h  MiniDumpException.cpp  MiniDumpException.h  (+50 more)
MiniDumpExplorerDll/: App.base.h  App.cpp  App.h  App.idl  App.xaml  AtLeastToVisibilityConverter.cpp  AtLeastToVisibilityConverter.h  AtLeastToVisibilityConverter.idl  BooleanToVisibilityConverter.cpp  BooleanToVisibilityConverter.h  BooleanToVisibilityConverter.idl  ByteSizeConverter.cpp  ByteSizeConverter.h  ByteSizeConverter.idl  Category.h  Category.idl  DateTimeConverter.cpp  DateTimeConverter.h  DateTimeConverter.idl  DumpFileType.idl  DumpFileView.cpp  DumpFileView.h  DumpFileView.idl  DumpFileView.xaml  DumpHeader.cpp  DumpHeader.h  DumpHeader.idl  DumpHeader.xaml  DumpHeaderView.cpp  DumpHeaderView.h  DumpHeaderView.idl  DumpHeaderView.xaml  DumpStreamComment.cpp  DumpStreamComment.h  DumpStreamComment.idl  DumpStreamComment.xaml  DumpStreamCommentView.cpp  DumpStreamCommentView.h  DumpStreamCommentView.idl  DumpStreamCommentView.xaml  (+311 more)
MiniDumper/: CMakeLists.txt  MiniDumper.cpp  MiniDumper.exe.manifest  MiniDumper.vcxproj  MiniDumper.vcxproj.filters  Resource.rc  common_symbol_lookup_utils.cpp  common_symbol_lookup_utils.h  dump_file_options.cpp  dump_file_options.h  dump_mini_dump.cpp  dump_mini_dump.h  dump_mini_dump_app_info.cpp  dump_mini_dump_app_info.h  dump_mini_dump_comment.cpp  dump_mini_dump_comment.h  dump_mini_dump_exception.cpp  dump_mini_dump_exception.h  dump_mini_dump_heap.cpp  dump_mini_dump_heap.h  dump_mini_dump_heap_crt.cpp  dump_mini_dump_heap_debug_page_heap.cpp  dump_mini_dump_heap_graph.cpp  dump_mini_dump_heap_nt_heap.cpp  dump_mini_dump_heap_segment_heap.cpp  dump_mini_dump_heap_statistics.cpp  dump_mini_dump_heap_utils.cpp  dump_mini_dump_info.cpp  dump_mini_dump_info.h  dump_mini_dump_memory.cpp  dump_mini_dump_memory.h  dump_mini_dump_module.cpp  dump_mini_dump_module.h  dump_mini_dump_streams.cpp  dump_mini_dump_streams.h  dump_mini_dump_symbols.cpp  dump_mini_dump_symbols.h  dump_mini_dump_thread.cpp  dump_mini_dump_thread.h  resource.h  (+4 more)
ValidateHeapEntries/: CMakeLists.txt  ValidateHeapEntries.cpp  ValidateHeapEntries.vcxproj  ValidateHeapEntries.vcxproj.filters  symbol_engine_ui.cpp  symbol_engine_ui.h  vcpkg.json
(+584 files in other folders)
